outputs_20260327-054203-73cd0a5f/codegen/production/build_logs/compiler_stderr.log
In file included from C:\Users\extanke\AppData\Local\Temp\tdd_build_gby42oih\src\gtm_tom_3_phase_inverter_pwm.c:19:
C:\Users\extanke\AppData\Local\Temp\tdd_build_gby42oih\include/IfxGtm_Tom_PwmHl.h:30:3: error: conflicting types for 'IfxGtm_Tom_ToutMap'; have 'struct <anonymous>'
   30 | } IfxGtm_Tom_ToutMap;
      |   ^~~~~~~~~~~~~~~~~~
In file included from C:\Users\extanke\AppData\Local\Temp\tdd_build_gby42oih\src\gtm_tom_3_phase_inverter_pwm.c:18:
C:\Users\extanke\AppData\Local\Temp\tdd_build_gby42oih\include/IfxGtm_Tom_Timer.h:51:3: note: previous declaration of 'IfxGtm_Tom_ToutMap' with type 'IfxGtm_Tom_ToutMap'
   51 | } IfxGtm_Tom_ToutMap;
      |   ^~~~~~~~~~~~~~~~~~
C:\Users\extanke\AppData\Local\Temp\tdd_build_gby42oih\include/IfxGtm_Tom_PwmHl.h:40:5: error: unknown type name 'sint8'; did you mean 'uint8'?
   40 |     sint8           setMode;
      |     ^~~~~
      |     uint8
C:\Users\extanke\AppData\Local\Temp\tdd_build_gby42oih\src\gtm_tom_3_phase_inverter_pwm.c:21:10: fatal error: IfxGtm_PinMap.h: No such file or directory
   21 | #include "IfxGtm_PinMap.h"
      |          ^~~~~~~~~~~~~~~~~
compilation terminated.

In file included from C:\Users\extanke\AppData\Local\Temp\tdd_build_gby42oih\mocks\mock_gtm_tom_3_phase_inverter_pwm.c:6:
C:\Users\extanke\AppData\Local\Temp\tdd_build_gby42oih\include/IfxGtm_Tom_PwmHl.h:30:3: error: conflicting types for 'IfxGtm_Tom_ToutMap'; have 'struct <anonymous>'
   30 | } IfxGtm_Tom_ToutMap;
      |   ^~~~~~~~~~~~~~~~~~
In file included from C:\Users\extanke\AppData\Local\Temp\tdd_build_gby42oih\mocks\mock_gtm_tom_3_phase_inverter_pwm.c:5:
C:\Users\extanke\AppData\Local\Temp\tdd_build_gby42oih\include/IfxGtm_Tom_Timer.h:51:3: note: previous declaration of 'IfxGtm_Tom_ToutMap' with type 'IfxGtm_Tom_ToutMap'
   51 | } IfxGtm_Tom_ToutMap;
      |   ^~~~~~~~~~~~~~~~~~
C:\Users\extanke\AppData\Local\Temp\tdd_build_gby42oih\include/IfxGtm_Tom_PwmHl.h:40:5: error: unknown type name 'sint8'; did you mean 'uint8'?
   40 |     sint8           setMode;
      |     ^~~~~
      |     uint8
C:\Users\extanke\AppData\Local\Temp\tdd_build_gby42oih\mocks\mock_gtm_tom_3_phase_inverter_pwm.c:168:1: error: unknown type name 'IfxGtm_Pwm_ToutMap'; did you mean 'IfxGtm_Tom_ToutMap'?
  168 | IfxGtm_Pwm_ToutMap IfxGtm_TOM1_1_TOUT11_P00_2_OUT = {0};
      | ^~~~~~~~~~~~~~~~~~
      | IfxGtm_Tom_ToutMap
C:\Users\extanke\AppData\Local\Temp\tdd_build_gby42oih\mocks\mock_gtm_tom_3_phase_inverter_pwm.c:169:1: error: unknown type name 'IfxGtm_Pwm_ToutMap'; did you mean 'IfxGtm_Tom_ToutMap'?
  169 | IfxGtm_Pwm_ToutMap IfxGtm_TOM1_2_TOUT12_P00_3_OUT = {0};
      | ^~~~~~~~~~~~~~~~~~
      | IfxGtm_Tom_ToutMap
C:\Users\extanke\AppData\Local\Temp\tdd_build_gby42oih\mocks\mock_gtm_tom_3_phase_inverter_pwm.c:170:1: error: unknown type name 'IfxGtm_Pwm_ToutMap'; did you mean 'IfxGtm_Tom_ToutMap'?
  170 | IfxGtm_Pwm_ToutMap IfxGtm_TOM1_3_TOUT13_P00_4_OUT = {0};
      | ^~~~~~~~~~~~~~~~~~
      | IfxGtm_Tom_ToutMap
C:\Users\extanke\AppData\Local\Temp\tdd_build_gby42oih\mocks\mock_gtm_tom_3_phase_inverter_pwm.c:171:1: error: unknown type name 'IfxGtm_Pwm_ToutMap'; did you mean 'IfxGtm_Tom_ToutMap'?
  171 | IfxGtm_Pwm_ToutMap IfxGtm_TOM1_4_TOUT14_P00_5_OUT = {0};
      | ^~~~~~~~~~~~~~~~~~
      | IfxGtm_Tom_ToutMap
C:\Users\extanke\AppData\Local\Temp\tdd_build_gby42oih\mocks\mock_gtm_tom_3_phase_inverter_pwm.c:172:1: error: unknown type name 'IfxGtm_Pwm_ToutMap'; did you mean 'IfxGtm_Tom_ToutMap'?
  172 | IfxGtm_Pwm_ToutMap IfxGtm_TOM1_5_TOUT15_P00_6_OUT = {0};
      | ^~~~~~~~~~~~~~~~~~
      | IfxGtm_Tom_ToutMap
C:\Users\extanke\AppData\Local\Temp\tdd_build_gby42oih\mocks\mock_gtm_tom_3_phase_inverter_pwm.c:173:1: error: unknown type name 'IfxGtm_Pwm_ToutMap'; did you mean 'IfxGtm_Tom_ToutMap'?
  173 | IfxGtm_Pwm_ToutMap IfxGtm_TOM1_6_TOUT16_P00_7_OUT = {0};
      | ^~~~~~~~~~~~~~~~~~
      | IfxGtm_Tom_ToutMap
